--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5C8A34D24F091033FAA9B4AD8B6A7E81
+CopyrightNotice="MapleNaaa Copyright "
+
